assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Goldman:wght@400;700&family=Michroma&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

body{
    background-color: black;
    font-family: "Poppins", sans-serif;
    color: white;
    text-align: center;
}

.container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 10px;
  padding: 10px;
}

.certificate {
  width: 100%;
  max-width: 300px;
  height: auto;
  
  transition: transform 0.3s;
}

.hidden{
    display: none;
}
.material-symbols-outlined{
    margin-left: 90em;    
}
.material-symbols-outlined#close {
  position: absolute;
  top: 20px;
  right: 30px;
  font-size: 40px;
  color: white;
  cursor: pointer;
  
}
.popup {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.7);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 10px;
  box-sizing: border-box;
}

.p-contain img {
  max-width: 100%;
  height: auto;
  
}

#popup-img{
   
    margin-top: 50px;
    max-width: 90%;
    max-height: 80vh;
}

.certificate:hover{
    transform: translateY(-10px) scale(1.02);
    box-shadow: 0 0 20px 2px cyan;
}

.thumbnail-container {
  display: flex;
  justify-content: center;
  gap: 10px;
  margin-top: 20px;
  flex-wrap: wrap;
  
}

.thumbnail {
    position: relative;
  height: 60px;
  cursor: pointer;
  opacity: 0.8;
  transition: transform 0.3s ease, opacity 0.3s;
  
}

.thumbnail:hover {
    transform: translateY(-5px) ;
  opacity: 1;
}

.thumbnail.selected {
    box-shadow: 0 0 20px 2px cyan;
    transform: translateY(-5px) scale(1.1);
  opacity: 1;
}

@media (max-width: 768px) {
  .certificate {
    max-width: 90%;
  }

  .popup .p-contain {
    width: 90%;
    max-width: 100%;
  }

  .thumbnail {
    height: 50px;
  }
}

